<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.SeekFragment">


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/route"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="5dp"
        app:boxCornerRadiusTopStart="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.254"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.828">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/seek_route_text"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:ellipsize="end"
            android:maxLines="1"
            tools:ignore="KeyboardInaccessibleWidget" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main_color"
        android:clickable="true"
        android:contentDescription="@string/self_locate"
        android:focusable="true"
        android:src="@android:drawable/ic_menu_mylocation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.895"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72" />

    <ToggleButton
        android:id="@+id/drive_button"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:background="@drawable/toggle_button_color"
        android:drawablePadding="15dp"
        android:textOff="@string/drive"
        android:textOn="@string/drive"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton2"
        app:layout_constraintVertical_bias="0.15" />


    <androidx.cardview.widget.CardView
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/main_color"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.949">

        <TextView
            android:id="@+id/seek_passenger_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/seat_count"
            android:textAlignment="center"
            android:textSize="34sp"
            tools:layout_editor_absoluteX="337dp"
            tools:layout_editor_absoluteY="413dp" />
    </androidx.cardview.widget.CardView>

    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </org.osmdroid.views.MapView>
</androidx.constraintlayout.widget.ConstraintLayout>